Localization for client and bonus pages

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -1,4 +1,4 @@
-button.submit = Log in
+button.login = Log in
 language.en = En
 language.ru = Ru
 button.logout = Log out
@@ -24,4 +24,12 @@ menu.interns = Your interns
 menu.clients = Clients
 menu.bonus = Bonuses
 menu.menu = Menu
+bonus.header = Bonus settings
+table.name = Name and surname
+table.email = Email
+table.currentBonus = Current bonus
+table.chooseNewBonus = Select new bonus value
+button.submit = submit
+table.trainerName = Trainer's name
+table.chooseNewTrainer = Choose new trainer
 
