Localization for intern Card

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -32,4 +32,13 @@ table.chooseNewBonus = Select new bonus value
 button.submit = submit
 table.trainerName = Trainer's name
 table.chooseNewTrainer = Choose new trainer
-
+table.startDate = Start date
+table.endDate = End date
+table.currentDiet = CurrentDiet
+table.chooseNewDiet = Choose new diet 
+table.currentStatus = Current status
+table.chooseNewStatus = Choose new status
+internCard.header = Client's program
+header.trainingProgram = Training program
+table.exerciseName = Exercise name
+table.exerciseFrequency = Exercise frequency
