Localization for program card and subscription

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -34,7 +34,7 @@ table.trainerName = Trainer's name
 table.chooseNewTrainer = Choose new trainer
 table.startDate = Start date
 table.endDate = End date
-table.currentDiet = CurrentDiet
+table.currentDiet = Current diet
 table.chooseNewDiet = Choose new diet 
 table.currentStatus = Current status
 table.chooseNewStatus = Choose new status
@@ -42,3 +42,9 @@ internCard.header = Client's program
 header.trainingProgram = Training program
 table.exerciseName = Exercise name
 table.exerciseFrequency = Exercise frequency
+interns.header = List of clients
+programCard.header = Your current program
+table.subscriptionName = Subscription name 
+table.paidDate = Paid date
+table.amountPaid = Amount paid
+table.orderStatus = Order status
