CSS and JSP fixes

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -28,10 +28,10 @@ bonus.header = Bonus settings
 table.name = Name and surname
 table.email = Email
 table.currentBonus = Current bonus
-table.chooseNewBonus = Select new bonus value
+table.chooseNewBonus = New bonus value
 button.submit = submit
 table.trainerName = Trainer's name
-table.chooseNewTrainer = Choose new trainer
+table.chooseNewTrainer = New trainer
 table.startDate = Start date
 table.endDate = End date
 table.currentDiet = Current diet
@@ -48,3 +48,6 @@ table.subscriptionName = Subscription name
 table.paidDate = Paid date
 table.amountPaid = Amount paid
 table.orderStatus = Order status
+title.clients = clients
+title.bonuses = bonuses
+message.clientsNotFound = There are no registered clients
