CSS and JSP fixes

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -51,3 +51,5 @@ table.orderStatus = Order status
 title.clients = clients
 title.bonuses = bonuses
 message.clientsNotFound = There are no registered clients
+message.programNotFound = Current program not found. Contact your intern. 
+message.trainingProgramNotFound = Training program not found. Please add training program for your intern.
