Training program fixes

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -53,3 +53,6 @@ title.bonuses = bonuses
 message.clientsNotFound = There are no registered clients
 message.programNotFound = Current program not found. Contact your intern. 
 message.trainingProgramNotFound = Training program not found. Please add training program for your intern.
+button.viewClient = View client card
+title.interns = Your interns
+clients.header = Client's list
