--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -56,3 +56,10 @@ message.trainingProgramNotFound = Training program not found. Please add trainin
 button.viewClient = View client card
 title.interns = Your interns
 clients.header = Client's list
+subscription.lightDescription = Just to keep a good shape or a little fix small disadvantages.
+subscription.mediumDescription = You are ready to work hard but not to much. That is for you
+subscription.hardDescription = You will work as hard as you can. We can guarantee that
+subscription.optimalDescription = Be body positive and keep your body healthy
+subscription.tableHeaderSummary = Subscriptions summary
+subscription.tableHeaderBuySubscriptions = Buy subscription
+subscription.period = Period in days
