--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -63,3 +63,5 @@ subscription.optimalDescription = Be body positive and keep your body healthy
 subscription.tableHeaderSummary = Subscriptions summary
 subscription.tableHeaderBuySubscriptions = Buy subscription
 subscription.period = Period in days
+adder.inAWeek = times a week
+message.NoActiveTrainingProgram = No active training program
