--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -51,8 +51,8 @@ table.orderStatus = Order status
 title.clients = clients
 title.bonuses = bonuses
 message.clientsNotFound = There are no registered clients
-message.programNotFound = Current program not found. Contact your intern. 
-message.trainingProgramNotFound = Training program not found. Please add training program for your intern.
+message.programNotFound = Current program not found. 
+message.trainingProgramNotFound = Training program not found.
 button.viewClient = View client card
 title.interns = Your interns
 clients.header = Client's list
@@ -65,3 +65,6 @@ subscription.tableHeaderBuySubscriptions = Buy subscription
 subscription.period = Period in days
 adder.inAWeek = times a week
 message.NoActiveTrainingProgram = No active training program
+header.reviews = Reviews 
+button.addReview = Add review
+review.AddComment = Add Your comment
